--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tarefagulp",
   "version": "1.0.0",
-  "description": "",
+  "description": "Kit de ferramentas de automação de tarefas baseada em JavaScript",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3"
-  }
+  },
+  "keywords": []
 }
