tarefas gulp funcionando - server ok

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "Bruno Saldanha",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "browser-sync": "^2.29.3",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-htmlmin": "^5.0.1",
